fix(ME-90): fixing users api documentation v2
